Regex change, Coordinate change, database minor change

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:visibility="visible"
         >
         
     </ListView>
