--- a/res/layout/activity_sector_map_display.xml
+++ b/res/layout/activity_sector_map_display.xml
@@ -11,8 +11,8 @@
     <ImageView
         android:id="@+id/sector_map"
         android:contentDescription="@string/map_descript"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
           />
